<resources>
    <string name="app_name">Stormy</string>

    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_ok">OK</string>
    <string name="network_unavailable">Network is unavailable</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">Please check your internet connection and try again</string>
    <string name="network_error_ok">OK</string>
    <string name="summary_placeholder">Getting current weather....</string>
    <string name="dash_placeholder">--</string>
    <string name="precip_placeholder">RAIN/SNOW</string>
    <string name="elipses_placeholder">…</string>
    <string name="location_placeholder">Nashville, TN</string>
    <string name="humidity_placeholder">HUMIDITY</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_data_display">There is no data to display</string>
    <string name="title_activity_hourly_forecast">HourlyForecast</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
